# SPOCP

./: AUTHORS  COPYRIGHT  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  Setup.mk  aclocal.m4  config.h.in  configure  configure.in  make.out  q  spocp.doxy
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  requests  traces.0  traces.1  traces.3  traces.4  traces.5  traces.7
backends/: Makefile.am  Makefile.in
backends/cert/: Makefile.am  Makefile.in  cert.c
backends/dback_gdbm/: Makefile.am  Makefile.in  dback_gdbm.c
backends/difftime/: Makefile.am  Makefile.in  difftime.c
backends/flatfile/: Makefile.am  Makefile.in  flatfile.c
backends/gdbm/: Makefile.am  Makefile.in  gdbm.c
backends/ipnum/: Makefile.am  Makefile.in  ipnum.c
backends/lastlogin/: Makefile.am  Makefile.in  lastlogin.c
backends/ldapproxy/: Makefile.am  Makefile.in  ldapproxy.c
backends/ldapset/: Makefile.am  Makefile.in  ldapset.c  ldapset.h  lsln.c  scnode.c  vset.c
backends/localgroup/: Makefile.am  Makefile.in  localgroup.c
backends/mailmatch/: Makefile.am  Makefile.in  mailmatch.c
backends/motd/: Makefile.am  Makefile.in  motd.c
backends/rbl/: Makefile.am  Makefile.in  rbl.c
backends/regexp/: Makefile.am  Makefile.in  regexp.c
backends/spocp/: Makefile.am  Makefile.in  spocp.c
backends/sql/: Makefile.am  Makefile.in  sql.c
backends/strmatch/: Makefile.am  Makefile.in  strmatch.c
backends/system/: .cvsignore  Makefile.am  Makefile.in  system.c
backends/time/: Makefile.am  Makefile.in  time.c
cf/: Makefile.am  Makefile.in  check_sasl2.m4  check_ssl.m4
client/: Makefile.am  Makefile.in
client/src/: Makefile.am  Makefile.in  clilib.c  clilib.new.c
client/tools/: Makefile.am  Makefile.in  spocpget.c  spocppatch.c  spocpperf.c  spocpput.c  spocptest.c
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  libspocp-dev.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  spocp-default.ex  spocp-server.install  spocp.doc-base.EX  watch.ex
doc/: Makefile  Makefile.am  Makefile.in  adminguide.html  bcond.html  bcond.rtf  bcond.sgml  draft-hedberg-spocp-00.html  draft-hedberg-spocp-sexp-00.html  draft-hedberg-spocp-tcp-00.html  implement.html  index.html  intro.html  plugin.html  protocol.html  rules.html  spocp.8  spocp.html  spocpget.1  spocppatch.1  spocpput.1  spocptest.1
doc/bcond.rtfd/: TXT.rtf
include/: Makefile.am  Makefile.in  atom.h  atommatch.h  backend.h  basefn.h  basic.h  bcond.h  bcondfunc.h  be.h  boundary.h  boundarysl.h  branch.h  bsdrb.h  cache.h  check.h  config.h.in  cpool.h  db0.h  dback.h  dbapi.h  dset.h  element.h  free.h  func.h  func.h.old  hash.h  hashfunc.h  index.h  list.h  ll.h  log.h  macros.h  match.h  node.h  octet.h  parr.h  plugin.h  proto.h  range.h  (+23 more)
lib/: Makefile.am  Makefile.in  aci.c  atom.c  atommatch.c  backend.c  basic.c  bcexp.c  bcond.c  be_cpool.c  boundary.c  boundarysl.c  branch.c  bsdrb.c  cache.c  cachetime.c  check.c  complex_free.c  db0.c  dback.c  dbapi.c  display.c  dset.c  element.c  element_I.c  element_display.c  eval.c  extref.c  free.c  hash.c  hashfunc.c  index.c  input.c  io.c  junc.c  junc.h  list.c  ll.c  log.c  match.c  (+34 more)
libtest/: Makefile  flatfile.c
libtest/test_aci/: Makefile  test_aci.c
libtest/test_atom/: Makefile  test_atom.c
libtest/test_atommatch/: Makefile  test_atommatch.c
libtest/test_basic/: Makefile  test_basic.c
libtest/test_bcexp/: Makefile  test_bcexp.c
libtest/test_bcond/: Makefile  flatfile.c  test_bcond.c
libtest/test_becpool/: Makefile  test_becpool.c
libtest/test_boundary/: Makefile  test_boundary.c
libtest/test_boundarysl/: Makefile  test_boundarysl.c
libtest/test_branch/: Makefile  test_branch.c
libtest/test_bsdrb/: Makefile  test_bsdrb.c
libtest/test_cache/: Makefile  test_cache.c
libtest/test_cachetime/: Makefile  test_cachetime.c
libtest/test_check/: Makefile  test_check.c
libtest/test_db0/: Makefile  test_db0.c
libtest/test_dback/: Makefile  test_dback.c
libtest/test_dbapi/: Makefile  test_dbapi.c
libtest/test_dset/: Makefile  test_dset.c
libtest/test_element/: Makefile  test_element.c
libtest/test_element_I/: Makefile  test_element_I.c
libtest/test_eval/: Makefile  test_eval.c
libtest/test_hash/: Makefile  test_hash.c
libtest/test_hashfunc/: Makefile  test_hashfunc.c
libtest/test_index/: Makefile  test_index.c
libtest/test_junc/: Makefile  test_junc.c
libtest/test_list/: Makefile  test_list.c
libtest/test_ll/: Makefile  test_ll.c
libtest/test_match/: Makefile  test_match.c
libtest/test_oct/: Makefile  test_oct.c
libtest/test_octarr/: Makefile  test_octarr.c
libtest/test_parr/: Makefile  test_parr.c
libtest/test_parse/: Makefile  file.1  file.2  file.3  file.4  test_parse.c
libtest/test_plugin/: Makefile  test_plugin.c
libtest/test_range/: Makefile  test_range.c
libtest/test_rangestore/: Makefile  test_rangestore.c
libtest/test_rdb/: Makefile  test_rdb.c
libtest/test_resset/: Makefile  test_resset.c
libtest/test_rm/: Makefile  test_rm.c
libtest/test_rvapi/: Makefile  (+1 more)
server/: Makefile.am  Makefile.in  aci.c  adminsrv.c  cmp.c  collect.c  con.c  config.c  conn.c  cpool.c  init.c  iobuf.c  locl.h  main.c  opstack.c  pool.c  rdwr.c  read.c  readcnf.c  readcnf.h  reply.c  ruledef.h  ruleset.c  run.c  saci.c  socket.c  srv.c  srv.h  srvconf.h  ss.c  svn-commit.tmp  thread.c  tls.c  tpool.c  treelist.c  util.c
server/test/test_config/: Makefile  conf.0  test_config.c  test_config.h
server/test/test_conn/: Makefile  test_conn.c
server/test/test_iobuf/: Makefile  test_iobuf.c
server/test/test_pool/: Makefile  test_pool.c
server/test/test_read/: Makefile  rules.0  rules.1  test_read.c
server/test/test_reply/: Makefile  test_reply.c
server/test/test_ruleset/: Makefile  test_ruleset.c
server/test/test_saci/: Makefile  test_saci.c
util/: Makefile.am  Makefile.in  adv2can.c  canonsexp.c
(+65 files in other folders)
