# $Id: Makefile.am 440 2004-11-18 09:20:48Z roland $

SUBDIRS = include lib server util client backends doc cf

EXTRA_DIST = \
	COPYRIGHT \
	INSTALL \
	TODO \
	aclocal.m4 \
	config.guess \
	config.sub \
	install-sh \
	ltmain.sh \
	missing \
	Setup.mk \
	spocp.doxy \
	cf/check_sasl2.m4 \
	cf/check_ssl.m4

