EXTRA_DIST = html/adminguide.html html/intro.html html/rules.html \
	html/bcond.html html/implement.html html/index.html \
	html/protocol.html html/draft-hedberg-spocp-sexp-00.html \
	html/draft-hedberg-spocp-00.html html/draft-hedberg-spocp-tcp-00.html \
	html/plugin.html \
	spocp.8 spocpput.1 spocpget.1 spocptest.1 spocppatch.1
