spocp_HDRS = atom.h check.h free.h log.h resset.h ssn.h \
	atommatch.h boundary.h db0.h hash.h macros.h proto.h result.h sha1.h subelem.h \
	basefn.h boundarysl.h dback.h hashfunc.h match.h range.h rm.h skiplist.h tree.h \
	basic.h branch.h dbapi.h index.h node.h rdb.h ruleinfo.h slist.h varr.h \
	bcond.h bsdrb.h dset.h list.h octet.h rdwr.h ruleinst.h verify.h \
	bcondfunc.h cache.h element.h ll.h parr.h readcnf.h wrappers.h

EXTRA_DIST = $(spocp_HDRS)

include_HEADERS = spocp.h spocpcli.h rvapi.h be.h plugin.h sexptool.h
